# python-ed25519-blake2b

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
